# Added a Grid System to manage drawing of enities onto the screen 1. the Grid once created can't be changed and remains constant till end of program 2.the grid provides as a system where we can acess every cell of the grid with time complexity o(1) if we kown it's cell number

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
                 "--debug-brk"
             ],
             "stopAtEntry": false,
-            "cwd": "${fileDirname}",
+            "cwd": "${workspaceFolder}",
             "environment": [
                 {
                     "name": "config",
